--- a/Specify/help/SpecifyHelp/Workbench/LatLongConvert.html
+++ b/Specify/help/SpecifyHelp/Workbench/LatLongConvert.html
@@ -8,7 +8,7 @@
   <body>
   <h2>Latitude/Longitude Converter Tool </h2>
   <hr>
-  <p>The Latitude/Longitude Converter tool converts the geocoordinate formats within the latitude1 and Longitude1 columns of a Data Set. The tool can either replace the original format or keep the original and store a new format in the LatitudeText1 and LongitudeText1 columns. </p>
+  <p>The Latitude/Longitude Converter tool converts the geocoordinate formats within the latitude1 and Longitude1 columns of a Data Set. The tool can either replace the original format or keep the original and store a new format in the Lat1Text and Long1Text columns. </p>
   <p>&nbsp;</p>
   <p><strong><u>The Latitude/Longitude Converter tool has the following requirements:</u></strong></p>
   <p>The tool button, <img src="../images/LatitudeLongitudeConverter16x16.png" width="16" height="17">,   is located on the Workspace Item Bar and is only available when editing a Data Set as a Grid.</p>
