--- a/Specify/help/SpecifyHelp/Workbench/SpecialTools.html
+++ b/Specify/help/SpecifyHelp/Workbench/SpecialTools.html
@@ -8,7 +8,7 @@
   <body>
   <h2>Special Tools</h2>
   <hr>
-  <p>When editing a Data Set in the Grid view several special tools are available in the Workspace Item Bar. These tools require  geographical data from specific columns within a Data Set. The following is a list of the tools as well as a description of each their   Column requirements. </p>
+  <p>When editing a Data Set in the Grid view several special tools are available in the Workspace Item Bar. These tools require  geographical data from specific columns within a Data Set. The following  list provides a description of each tool and its required column headings. </p>
   <p>&nbsp;</p>
   <table width="83%" border="1" cellspacing="1" cellpadding="6">
     <tr>
@@ -26,7 +26,7 @@
       </td>
     </tr>
     <tr>
-      <td><img src="../images/GoogleEarth16x16.png" alt="google" width="16" height="16"></td>
+      <td><img src="../images/GoogleEarth32x32.png" alt="Google earth" width="32" height="32"></td>
       <td>Google Earth </td>
       <td>Generates a Google Earth KML file from the row data and loads it into Google Earth. The rows display as 'push pins' which are identified by their row number. Clicking on the push pin displays the row information as a pop-up window. </td>
       <td><p>Latitude1</p>
