--- a/Specify/help/SpecifyHelp/Workbench/NewDataSet.html
+++ b/Specify/help/SpecifyHelp/Workbench/NewDataSet.html
@@ -8,10 +8,10 @@
 <body>
 <h2>New Data Set</h2>
 <hr>
-<p>The first step in creating a New Data Set is to choose the columns that will be included in the new Data Set. This is achieved by either copying the column headings from an existing  Data Set or creating one from the list of fields available in Specify. </p>
+<p>The first step in creating a new Data Set is to choose the columns that will be included in the new Data Set. This is achieved by either reusing the column headings from an existing  Data Set or creating one from the list of fields available in Specify. </p>
 <p>If a Data Set exists with the same column headings, or map, needed for the new Data Set, simply drag the Data Set item onto the New Data Set action on the Sidebar. This eliminates the need to choose a Data Set from a file dialog. </p>
-<p><em><strong>Note:</strong></em> Data Sets that are open in the Workspace are disabled in the Sidebar. To copy the column headings from an existing Data Set it must be first be closed.</p>
-<p>Or,  bypass  the drag and drop feature, and click the New Data Set item on the Sidebar. The following dialog will appear: </p>
+<p><em><strong>Note:</strong></em> Data Sets that are open in the Workspace are disabled in the Sidebar. To copy the column headings from an existing Data Set it must  first be closed.</p>
+<p>To  bypass  the drag and drop feature, click the New Data Set item on the Sidebar. The following dialog will appear: </p>
 <p align="center"><img src="../images/NewDataSet.png" alt="New Data Set"></p>
 <p align="center"><span class="imgcaption">New Data Set</span></p>
 <p>To copy column headings from an existing Data Set select the 'Use an existing Data Set mapping' button and choose the Data Set from the list provided. The Data Set Properties dialog will then open, to name and describe the new Data Set. </p>
@@ -51,12 +51,14 @@
   <li>Click the <img src="../images/Map16x16.png" alt="map" width="16" height="16"> (map) button</li>
   <li>The new column heading will appear under both Data Set Columns and  Specify Fields(as shown below) </li>
 </ol>
-<p align="left">A <img src="../images/linked_right.png" width="32" height="16"> (link) icon identifies that the Specify field is mapped to the Data Set column. </p>
+<p align="left">A <img src="../images/linked_right.png" width="32" height="16"> (link) icon confirms that the Specify field is mapped to the Data Set column. </p>
 <p align="center"><img src="../images/DataSetMappingEditor2.png" ></p>
 <p align="center" class="imgcaption">Data Set Mapping Editor with one column added </p>
 <p align="left">&nbsp;</p>
 <p align="left">Continue adding fields/columns until the  'Data Set Columns' list is complete, then click  'OK'. </p>
 <p align="left">The Data Set Properties dialog will  appear, which allows the new Data Set to be named and described. </p>
+<p align="center"><img src="../images/datasetproperties.png" alt="Data Set Properties"></p>
+<p align="center" class="imgcaption">Data Set Properties </p>
 <p align="left">To edit the Data Set Mapping, see <a href="EditMapping.html">Edit Data Set Mapping</a>. </p>
 <p align="left">&nbsp; </p>
 
