--- a/trunk/Specify/help/SpecifyHelp/Workbench/LatLongConvert.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/LatLongConvert.html
@@ -8,15 +8,17 @@
   <body>
   <h2>Latitude/Longitude Converter Tool </h2>
   <hr>
-  <p>The Latitude/Longitude Converter tool converts the geocoordinate formats within the latitude1 and Longitude1 columns of a Data Set. The tool can either replace the original format or keep the original and store a new format in the Lat1Text and Long1Text columns. </p>
+  <p>The Latitude/Longitude Converter tool converts the geocoordinate formats within the Latitude1 and Longitude1 columns of a Data Set. The tool can either replace the original format or keep the original and store a new format in the Lat1Text and Long1Text columns. </p>
   <p>&nbsp;</p>
-  <p><strong><u>The Latitude/Longitude Converter tool has the following requirements:</u></strong></p>
-  <p>The tool button, <img src="../images/LatitudeLongitudeConverter16x16.png" width="16" height="17">,   is located on the Workspace Item Bar and is only available when editing a Data Set as a Grid.</p>
-  <p>The Data Set must include the Latitude1 and Longitude1 columns.</p>
-  <p>To WorkBench will keep the original geocoordinate formats in the Latitude1 and Longitude1 fields and write the new geocoordinate formats in the Lat1Text and Long1Text columns, but the Lat1Text and Long1Text columns have to be included in the Data Set before the conversion.</p>
+  <h3><strong><u>The Latitude/Longitude Converter Requirements:</u></strong></h3>
+  <p>The tool button, <img src="../images/LatitudeLongitudeConverter16x16.png" width="16" height="17">,   is located on the Workspace Item Bar  when editing a Data Set in Grid view. </p>
+  <p>The button is only enabled when the active Data Set includes the Latitude1 and Longitude1 columns. </p>
+  <p>To keep  the original formats in the Latitude1 and Longitude1 fields the Data Set must also include  Lat1Text and Long1Text columns.</p>
   <p>Note: The Lat1Text and Long1Text Columns can only fill once, if a second conversion is performed the new geocoordinates will replace the original values in Latitude1 and Longitude1. </p>
   <p>&nbsp;</p>
-  <p>To begin, select either Latitude1, or Longitude1 columns (or both). Then click the <img src="../images/LatitudeLongitudeConverter16x16.png" width="16" height="17"> button. The following dialog will appear: </p>
+  <h3><u>Converting Geocoordinates: </u></h3>
+  <p>To begin, select either the Latitude1, or Longitude1 column (or both). </p>
+  <p>Click the <img src="../images/LatitudeLongitudeConverter16x16.png" width="16" height="17"> button. The following dialog will appear: </p>
   <p align="center"><img src="../images/formatconverter.png" alt="Format Converter"></p>
   <p align="center" class="imgcaption">Georeference Format Converter </p>
   <p>Select the new georeference format and click 'Apply'. </p>
